# Python-DataStore

./: Data.py  DataStore.py  LICENSE  README.md  main.py  setup.cfg
Data/: Data.py
Saved_Data/: error_Data
Test/: E
