[metadata]
name = PythonDataStore
version = 0.0.1
author = ErrorTwo
author_email = errortwoo@gmail.com
description = This allows to make DataStoring a Breeze.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ErrorThree/Python-DataStore
project_urls =
    Bug Tracker = https://github.com/ErrorThree/Python-DataStore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True
